force-app/main/default/objects/Purchase_Line__c/fields/ItemId__c.field-meta.xml
<CustomField>
    <fullName>ItemId__c</fullName>
    <description>Master-detail relationship to the Item object, linking each purchase line to an item.</description>
    <label>ItemId</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Purchase Lines</relationshipLabel>
    <relationshipName>Purchase_Lines</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>