force-app/main/default/objects/Purchase_Line__c/fields/UnitCost__c.field-meta.xml
<CustomField>
    <fullName>UnitCost__c</fullName>
    <description>Cost per unit of the item purchased</description>
    <label>UnitCost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>